--- a/dkSVProgram/templates/hello.html
+++ b/dkSVProgram/templates/hello.html
@@ -1,9 +1,19 @@
 <html>
     <body>
-        {% if name %}
-        <h1> Hello {{name}} </h1>
-        {% else %}
-        <h1> Hello World </h1>
-        {% endif %}
+        <h1>Members</h1>
+
+        <table border="1">
+        {% for x in mymembers %}
+        <tr>
+        <td>{{ x.id }}</td>
+        <td>{{ x.firstname }}</td>
+        <td>{{ x.lastname }}</td>
+        </tr>
+        {% endfor %}
+        </table>
+
+        <p>
+        <a href="add/">Add member</a>
+        </p>
     </body>
 </html>
