adding fool control on data menagment

--- a/dkSVProgram/templates/add.html
+++ b/dkSVProgram/templates/add.html
@@ -5,10 +5,10 @@
         <form action="addrecord/" method="post">
         {% csrf_token %}
         Phone Number:<br>
-        <input name="phone">
+        <input name="Phone">
         <br><br>
         Time Line:<br>
-        <input name="timeline">
+        <input name="Timeline">
         <br><br>
         <input type="submit" value="Submit">
         </form>
